--- a/src/App.css
+++ b/src/App.css
@@ -62,3 +62,11 @@ h6 {
   font-weight: 400;
   line-height: 1.5;
 }
+
+.card-title {
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.5;
+  margin: 0;
+  text-transform: capitalize;
+}
