--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,53 @@ h6 {
   margin: 0;
   text-transform: capitalize;
 }
+
+.new-project-button {
+  margin: 0.5em;
+  border-radius: 0.25em;
+  width: 100%;
+  border: 1px solid #dee2e6;
+  background-color: #ccd5ae;
+  color: #000;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  cursor: pointer;
+}
+
+.new-task {
+  margin: 0.5em;
+  border-radius: 0.25em;
+  width: 100%;
+  border: 1px solid #dee2e6;
+  background-color: #ccd5ae;
+  color: #000;
+  font-size: 1rem;
+}
+
+.edit-form {
+  background-color: #f2cc8f;
+  border-radius: 0.25rem;
+  border: 1px solid #dee2e6;
+  padding: 0.2em;
+  width: 100%;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.5em;
+}
+
+.form-group label {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-transform: capitalize;
+}
+
+select {
+  width: 60%;
+}
